# oplyst-usa-financial

./: .gitignore  nuxt.config.ts  pm2.config.js
backend/: Cargo.toml  README.md
backend/src/: ctx.rs  error.rs  graphql.rs  helpers.rs  main.rs  model.rs  types.rs
backend/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
backend/tests/: quick_dev.rs
components/: LandingPage.vue  TheNavBar.vue
data-processing/: Cargo.toml
data-processing/src/: lib.rs  main.rs
data-processing/src/credit_insights/: credit.rs  mod.rs
data-processing/src/data_scripts/: business_credit_usa.rs  credit.rs  mod.rs  network_leads.rs  sba.rs  shippers.rs  usa.rs  zoom_info.rs
data-processing/src/db/: mod.rs  postgres.rs  prelude.rs
data-processing/src/model/: account.rs  mod.rs  prelude.rs  shippers.rs  us_business_credit_analysis.rs  us_business_credit_leads.rs  us_zoom_info.rs
data-processing/src/utils/: constants.rs  functions.rs  mod.rs  rename_csv_column.rs  zip_code.rs
frontend/: app.vue  components.json  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.storybook/: main.ts
frontend/TEST/: Accordion.stories.ts  AccordionContent.stories.ts  AccordionItem.stories.ts  AccordionTrigger.stories.ts  Alert.stories.ts  AlertDescription.stories.ts  AlertDialog.stories.ts  AlertDialogAction.stories.ts  AlertDialogCancel.stories.ts  AlertDialogContent.stories.ts  AlertDialogDescription.stories.ts  AlertDialogFooter.stories.ts  AlertDialogHeader.stories.ts  AlertDialogTitle.stories.ts  AlertDialogTrigger.stories.ts  AlertTitle.stories.ts  AspectRatio.stories.ts  Avatar.stories.ts  AvatarFallback.stories.ts  AvatarImage.stories.ts  Badge.stories.ts  Button.stories.ts  Calendar.stories.ts  Card.stories.ts  CardContent.stories.ts  CardDescription.stories.ts  CardFooter.stories.ts  CardHeader.stories.ts  CardTitle.stories.ts  Checkbox.stories.ts  Collapsible.stories.ts  CollapsibleContent.stories.ts  CollapsibleTrigger.stories.ts  Command.stories.ts  CommandDialog.stories.ts  CommandEmpty.stories.ts  CommandGroup.stories.ts  CommandInput.stories.ts  CommandItem.stories.ts  CommandList.stories.ts  (+133 more)
frontend/apollo/: cms.ts
frontend/assets/: goldmanSans.css  variables.scss
frontend/components/: Card.vue  LandingPage.vue  Notification.vue  Test.vue  TheAppFooter.vue  TheNavBar.vue
frontend/layouts/: default.vue  error.vue
frontend/pages/: about.vue  index.vue
frontend/queries/: services.gql
frontend/stories/: Test.stories.ts  TheNavBar.stories.ts
frontend/styles/: colors.ts
loan-underwriting/: Cargo.toml
scripts/: folder_setup.sh
(+113 files in other folders)
