[package]
name = "oplyst-financial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
axum = {version = "0.6.19" , features = ["macros"]}
tower = {version = "0.4.12", features = ["full"]}
tower-http = {version = "*", features = ["fs"]}
tower-cookies = "0.9"
lazy-regex = "2"
[dev-dependencies]
anyhow = "1.0.40"
httpc-test = {version = "0.1.5", features = ["color-output"] }
