[package]
name = "data-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.26.1", features = ["dtype-date", "dtype-datetime","rows", "strings","serde", "string_justify", "json", "parquet", "decompress", "sort_multiple", "dataframe_arithmetic", "performant"] }
