[package]
name = "data-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.26.1", features = ["dtype-date", "lazy","dtype-datetime","rows", "strings","serde", "string_justify", "parquet", "decompress", "sort_multiple", "dataframe_arithmetic", "performant","json"] }
scraper = "0.12.0"
csv = "1.2.2"
regex = "1.9.3"
