[package]
name = "data-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.32.1", features = ["dtype-date", "lazy","dtype-datetime","rows", "strings","serde", "string_justify", "parquet", "decompress", "sort_multiple", "dataframe_arithmetic", "performant","json"] }
#polars-lazy ="0.29.0"
uuid  = { version = "1.4.1", features = ["v4","fast-rng","macro-diagnostics"]}
scraper = "0.12.0"
arrow = " 46.0.0"
csv = "1.2.2"
regex = "1.9.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
#may not need tokio-postgres anymore
tokio-postgres =  "0.7.10"

